--- a/nep-16.mediawiki
+++ b/nep-16.mediawiki
@@ -87,17 +87,17 @@ The value of the <code>callFlags</code> item is a mask of flags used to denote t
 |-
 | None || 0 || called without other permissions
 |-
-| ReadStates || 0b00000001 || may read the storage 
+| ReadStates || 0b00000001 || allow to read the storage 
 |-
-| WriteStates || 0b00000010 || may write the storage
+| WriteStates || 0b00000010 || allow to write the storage
 |-
 | AllowCall || 0b00000100 || allow to call methods in other contracts
 |-
-| AllowNotify || 0b00001000 || may send the notification
+| AllowNotify || 0b00001000 || allow to send the notification
 |-
-| States || 0b00000011 ||  may read and write the storage
+| States || 0b00000011 ||  allow to read and write the storage
 |-
-| ReadOnly || 0b00000101 || may read the storage and call methods in other contracts
+| ReadOnly || 0b00000101 || allow to read the storage and call methods in other contracts
 |-
 | All || 0b00001111 || equipped with all permissions above
 |}
@@ -110,4 +110,4 @@ The value of <code>script</code> stores the raw VM opcodes. The data should be s
 
 ===checksum===
 
-The <code>checksum</code> item is used not only to ensure a corrupt-free transmission, but also to ensure that the file has not been tampered with. It is computed by using the SHA256 algorithm to hash the serialised NefFile excluding checksum twice, and converting the result into a 32-bit unsigned integer.
+The <code>checksum</code> item is used not only to ensure a corrupt-free transmission, but also to ensure that the file has not been tampered with. It is computed by using the SHA256 algorithm to hash the serialised <code>nef</code> file excluding <code>checksum</code> twice, and converting the result into a 32-bit unsigned integer, which must be identical with the last four bytes of the <code>nef</code> file.
